--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body id="top">
     <!-- page header -->
-   <header>
+   <header class="page-header">
        <h1>The Design Portfolio of Alejo Vallet</h1>
-       <nav>
-           <ul>
+       <nav class="main-navigation">
+           <ul class="inline-list">
                <li><a href="#">Home</a></li>
                <li><a href="#portfolio">About</a></li>
                <li><a href="#link">Contact</a></li>
@@ -41,30 +42,30 @@
            <div class="container">
                <h3>My Work</h3>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt itaque, enim omnis nemo facilis labore officiis repudiandae. Asperiores aut corporis modi, neque a maiores dolore cum! Amet minus quae tenetur.</p>
-               <ul>
+               <ul class="inline-list portfolio-list">
                    <li>
-                       <a href="http://">
+                       <a href="#">
                          <h2>Work 1</h2>
                          <img src="https://via.placeholder.com/150C" alt="Portfolio image">
                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, iste!</p>
                         </a>
                     </li>
                    <li>
-                        <a href="http://">
+                        <a href="#">
                             <h2>Work 2</h2>
                             <img src="https://via.placeholder.com/150C" alt="Portfolio image">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, iste!</p>
                            </a>
                    </li>
                    <li>
-                        <a href="http://">
+                        <a href="#">
                             <h2>Work 3</h2>
                             <img src="https://via.placeholder.com/150C" alt="Portfolio image">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, iste!</p>
                            </a>
                    </li>
                    <li>
-                        <a href="http://">
+                        <a href="#">
                             <h2>Work 4</h2>
                             <img src="https://via.placeholder.com/150C" alt="Portfolio image">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, iste!</p>
@@ -74,12 +75,12 @@
            </div>
        </section>
 
-       <!-- start fiend section -->
+       <!-- start friend section -->
        <section id="link">
            <div class="container">
                <h3>Links</h3>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quasi.</p>
-               <ul>
+               <ul class="inline-list">
                    <li><a href="#">link 1</a></li>
                    <li><a href="#">link 1</a></li>
                    <li><a href="#">link 1</a></li>
@@ -90,7 +91,7 @@
 
        <!-- start contact section -->
        <section>
-           <div class="container"></div>
+           <div class="container">
               <h3>Contact</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, eum!</p>
               <a href="mailto:alejo.vallet@gmail.com">alejo.vallet@gmail.com</a>
@@ -99,12 +100,12 @@
 
    </main>
    <footer>
-       <ul>
+       <ul class="inline-list">
            <li>
-               <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+               <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
             </li>
-           <li>
-               <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <li>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
             </li>
            <li>
                <a href="http://www.linkedin.com/in/alejo-vallet" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
